--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
       html {
         font-family: 'Helvetica Neue';
         font-weight: 200;
+        padding: 2rem;
       }
 
       body {
-        margin: 2rem;
+        margin: 0 auto;
+        max-width: 860px;
       }
 
       hr {
