add more things I did

--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
           <h3>Senior Engineer | Fan TV <span>2013 | 2 years</span></h3>
           <p>
           Full stack developer on multiple projects including www.fan.tv and many internal tools. 
-          Built a highly performant (jank-free and consistent 60fps) full-screen parallax marketing page for our flagship product launch.
-          Integrated modern front-end technologies into the existing web application with a 20k LOC legacy code base. 
-          Re-architected the network layer of the web application with a focus on simplification and performance bringing worst case pageload performance down from 10s to 600ms on data heavy pages.
-          Created a multi-threaded dependency management framework for efficient networking in Ruby.
           Led the web development team of 4 engineers, 2 designers, and 1 QA engineer to develop our mobile web application on an aggressive 6 month schedule.
+          Built a highly performant (jank-free and consistent 60fps) full-screen parallax marketing page for our flagship product launch.
+          Organized tech meetings to discuss modern web technology adoption.
+          Integrated modern front-end technologies into the existing web application with a 20k LOC legacy code base. 
+          Created a multi-threaded dependency management framework for efficient networking in Ruby.
+          Wrote a highly optimized persistent HTTP connection framework to manage connections between components in a service oriented architecture.
+          Re-architected the network layer of the web server with a focus on simplification and performance bringing worst case pageload performance down from 10s to 600ms on data heavy pages.
           Architected, designed and implemented a complete reboot of an internal tool used daily by a team of data analysts for associating Media with Metadata.
           Developed a real-time debugging tool that connects to our android OpenGL interface on our set-top-box and allows on the fly modification of application state.
           </p>
