--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       }
 
       body {
+        position: relative;
         margin: 0 auto;
         max-width: 860px;
       }
@@ -37,9 +38,11 @@
         font-weight: 200;
         color: #2979D0;
         margin: 0 0 0.5rem;
+        float: left;
       }
 
-      h3 span {
+      h3:nth-of-type(2) {
+        text-align: right;
         float: right;
       }
 
@@ -54,12 +57,15 @@
       }
 
       p {
+        clear: both;
         line-height: 1.25rem;
         margin: 0 0 1rem;
       }
 
       aside {
-        float: left;
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 120px;
       }
 
@@ -70,6 +76,7 @@
       aside > img {
         border-radius: 20px;
         height: 120px;
+        min-width: 20px
       }
 
       aside section img {
@@ -83,6 +90,10 @@
       .links a {
         display: inline-block;
         margin-right: 10px;
+      }
+
+      .links a:active {
+        color: black;
       }
 
       .links a .fa {
@@ -104,10 +115,124 @@
       }
       ::-moz-selection {
         background: #f0f0f0;
-      }      
+      }
+
+      @media (max-width: 500px) {
+        html {
+          padding: 1.2rem;
+        }
+
+        article {
+          margin-left: 0;
+        }
+
+        article h1 {
+          margin-left: 70px;
+          font-size: 2rem;
+          min-height: 65px;
+        }
+
+        .links a {
+          display: block;
+          margin: 10px 0;
+        }
+
+        h3 {
+          max-width: 50%;
+        }
+
+        aside {
+          position: initial;
+          width: initial;
+        }
+
+        aside > img {
+          position: absolute;
+          top: 0;
+          height: 60px;
+          border-radius: 12px;
+        }
+      }
     </style>
   </head>
   <body>
+    <article>
+      <h1>Michael William Messing</h1>
+      <hr>
+      <section class='links'>
+        <a href='tel:6505750578'><div class="fa fa-phone-square"></div>650.575.0578</a>
+        <a href='mailto:mwmessin@gmail.com'><div class="fa fa-envelope-square"></div>mwmessin@gmail.com</a>
+        <a href='http://www.github.com/mwmessin'><div class="fa fa-github-square"></div>github.com/mwmessin</a>
+      </section>
+      <hr>
+      <section class='work'>
+        <h2>Work</h2>
+        <div>
+          <h3>Senior Engineer&nbsp;| Fan&nbsp;TV</h3>
+          <h3>2013&nbsp;| 2&nbsp;years</h3>
+          <p>
+          Full stack developer on multiple projects including www.fan.tv and many internal tools. 
+          Led the web development team of 4 engineers, 2 designers, and 1 QA engineer to develop our mobile web application on an aggressive 6 month schedule.
+          Built a highly performant (jank-free and consistent 60fps) full-screen parallax marketing page for our flagship product launch.
+          Organized tech meetings to discuss modern web technology adoption.
+          Integrated modern front-end technologies into the existing web application with a 20k LOC legacy code base. 
+          Created a multi-threaded dependency management framework for efficient networking in Ruby.
+          Wrote a highly optimized persistent HTTP connection framework to manage connections between components in a service oriented architecture.
+          Re-architected the network layer of the web server with a focus on simplification and performance bringing worst case pageload performance down from 10s to 600ms on data heavy pages.
+          Architected, designed and implemented a complete reboot of an internal tool used daily by a team of data analysts for associating Media with Metadata.
+          Developed a real-time debugging tool that connects to our android OpenGL interface on our set-top-box and allows on the fly modification of application state.
+          </p>
+        </div>
+        <div>
+          <h3>Software Engineer&nbsp;| Acer Cloud Technology</h3>
+          <h3>2010&nbsp;| 3&nbsp;years</h3>
+          <p>
+          Lead front-end developer on www.cloud.acer.com, an HTML5 cloud storage project.
+          Designed and implemented a responsive-design layout to support various display screen sizes.
+          Localized the application into the i18n languages, taking into account the various effects on layout with right-to-left languages.
+          Added minification and concatenation to the build process for increased load performance and run-time execution of Javascript and CSS.
+          Introduced and advocated Coffeescript and JSON at Acer involving hosting tech talks as well as writing technical articles for internal circulation.
+          Developed a shared web component library including a video/audio player based on MediaElement.js as well as drag-and-drop upload, used for both internal and external services.
+          Prototyped multiple web interfaces to display synced music, photos and documents as well as manage devices.
+          Implemented a Selenium WebDriver and ImageMagick test suite for browser test automation with image diffs for rendering bugs.
+          Created a custom Javascript Class implementation to encapsulate prototypal inheritance and provide a 'Super' reference to overridden methods.
+          </p>
+        </div>
+        <div>
+          <h3>Software Engineer&nbsp;| Ziosoft Inc.</h3>
+          <h3>2008&nbsp;| 2&nbsp;years</h3>
+          <p>
+          Lead front-end developer on a 3D web-based medical imaging application "Versaweb". (description: www.qiimaging.com/versaweb.html)
+          Increased application frame rate 3x through rendering and networking optimizations enabling a frame-rate of 15fps in Internet Explorer 6 without any plugins.
+          Added minification with YUI compressor and concatenation to the build process for efficient networking and execution of Javascript and CSS.
+          Sprite-mapped button icons to minimize HTTP resource requests and speed up loading-time.
+          Implemented touch and gestural interface for touch-enabled devices, including CT-scan view panning, pinch zooming, as well as x-ray radiosity window-level/width to grayscale mapping.
+          Implemented view-sharing across users for simultaneous view sessions.
+          Localized the application into Japanese, French, and German.
+          </p>
+        </div>
+        <div>
+          <h3>Research Intern&nbsp;| Genome Institute of Singapore</h3>
+          <h3>Summer 2007</h3>
+          <p>
+          Research associate in the bioinformatics laboratory of Professor Guillaume Bourque.
+          Investigated the evolutionary origins and functions of retrotransposons; cross-species statistically-identified repeating genetic structures.
+          Generated statistical plots of retrotransposon mutation across different species (LINEs and SINEs) for publication.
+          Utilized the UCSC Genome Browser to download and analyze multiple specie genomes.
+          Wrote cross-genome statistical analysis scripts in Perl and the R statistics environment.
+          </p>
+        </div>
+      </section>
+      <section class='education'>
+        <h2>Education</h2>
+        <h3>BS Computer Engineering&nbsp;| UCSD</h3>
+        <h3>2008</h3>
+        <p>
+        Courses included Compilers, Algorithms, Graphics, OSes, Security, AI and Architecture.
+        Some notable projects were an OpenGL rendering engine along with GLSL shaders for interactive bump-mapped textures, a C language compiler that generated the fastest and most efficient assembly in my class, and an implementation of threads in C with setjmp and longjmp.
+        </p>
+      </section>
+    </article>
     <aside>
       <img src='portrait.png' />
       <section class='languages'>
@@ -150,78 +275,6 @@
         <div>Bitcoin</div>
       </section>
     </aside>
-    <article>
-      <h1>Michael William Messing</h1>
-      <hr>
-      <section class='links'>
-        <a href='tel:6505750578'><div class="fa fa-phone-square"></div>650.575.0578</a>
-        <a href='mailto:mwmessin@gmail.com'><div class="fa fa-envelope-square"></div>mwmessin@gmail.com</a>
-        <a href='http://www.github.com/mwmessin'><div class="fa fa-github-square"></div>github.com/mwmessin</a>
-      </section>
-      <hr>
-      <section class='work'>
-        <h2>Work</h2>
-        <div>
-          <h3>Senior Engineer | Fan TV <span>2013 | 2 years</span></h3>
-          <p>
-          Full stack developer on multiple projects including www.fan.tv and many internal tools. 
-          Led the web development team of 4 engineers, 2 designers, and 1 QA engineer to develop our mobile web application on an aggressive 6 month schedule.
-          Built a highly performant (jank-free and consistent 60fps) full-screen parallax marketing page for our flagship product launch.
-          Organized tech meetings to discuss modern web technology adoption.
-          Integrated modern front-end technologies into the existing web application with a 20k LOC legacy code base. 
-          Created a multi-threaded dependency management framework for efficient networking in Ruby.
-          Wrote a highly optimized persistent HTTP connection framework to manage connections between components in a service oriented architecture.
-          Re-architected the network layer of the web server with a focus on simplification and performance bringing worst case pageload performance down from 10s to 600ms on data heavy pages.
-          Architected, designed and implemented a complete reboot of an internal tool used daily by a team of data analysts for associating Media with Metadata.
-          Developed a real-time debugging tool that connects to our android OpenGL interface on our set-top-box and allows on the fly modification of application state.
-          </p>
-        </div>
-        <div>
-          <h3>Software Engineer | Acer Cloud Technology <span>2010 | 3 years</span></h3>
-          <p>
-          Lead front-end developer on www.cloud.acer.com, an HTML5 cloud storage project.
-          Designed and implemented a responsive-design layout to support various display screen sizes.
-          Localized the application into the i18n languages, taking into account the various effects on layout with right-to-left languages.
-          Added minification and concatenation to the build process for increased load performance and run-time execution of Javascript and CSS.
-          Introduced and advocated Coffeescript and JSON at Acer involving hosting tech talks as well as writing technical articles for internal circulation.
-          Developed a shared web component library including a video/audio player based on MediaElement.js as well as drag-and-drop upload, used for both internal and external services.
-          Prototyped multiple web interfaces to display synced music, photos and documents as well as manage devices.
-          Implemented a Selenium WebDriver and ImageMagick test suite for browser test automation with image diffs for rendering bugs.
-          Created a custom Javascript Class implementation to encapsulate prototypal inheritance and provide a 'Super' reference to overridden methods.
-          </p>
-        </div>
-        <div>
-          <h3>Software Engineer | Ziosoft Inc. <span>2008 | 2 years</span></h3>
-          <p>
-          Lead front-end developer on a 3D web-based medical imaging application "Versaweb". (description: www.qiimaging.com/versaweb.html)
-          Increased application frame rate 3x through rendering and networking optimizations enabling a frame-rate of 15fps in Internet Explorer 6 without any plugins.
-          Added minification with YUI compressor and concatenation to the build process for efficient networking and execution of Javascript and CSS.
-          Sprite-mapped button icons to minimize HTTP resource requests and speed up loading-time.
-          Implemented touch and gestural interface for touch-enabled devices, including CT-scan view panning, pinch zooming, as well as x-ray radiosity window-level/width to grayscale mapping.
-          Implemented view-sharing across users for simultaneous view sessions.
-          Localized the application into Japanese, French, and German.
-          </p>
-        </div>
-        <div>
-          <h3>Research Intern | Genome Institute of Singapore <span>Summer 2007</span></h3>
-          <p>
-          Research associate in the bioinformatics laboratory of Professor Guillaume Bourque.
-          Investigated the evolutionary origins and functions of retrotransposons; cross-species statistically-identified repeating genetic structures.
-          Generated statistical plots of retrotransposon mutation across different species (LINEs and SINEs) for publication.
-          Utilized the UCSC Genome Browser to download and analyze multiple specie genomes.
-          Wrote cross-genome statistical analysis scripts in Perl and the R statistics environment.
-          </p>
-        </div>
-      </section>
-      <section class='education'>
-        <h2>Education</h2>
-        <h3>BS Computer Engineering | UCSD <span>2008</span></h3>
-        <p>
-        Courses included Compilers, Algorithms, Graphics, OSes, Security, AI and Architecture.
-        Some notable projects were an OpenGL rendering engine along with GLSL shaders for interactive bump-mapped textures, a C language compiler that generated the fastest and most efficient assembly in my class, and an implementation of threads in C with setjmp and longjmp.
-        </p>
-      </section>
-    </article>
     <div class="fa fa-flash"></div>
   </body>
 </html>
