--- a/index.html
+++ b/index.html
@@ -171,16 +171,18 @@
           <h3>Senior Engineer&nbsp;| Fan&nbsp;TV</h3>
           <h3>2013&nbsp;| 2&nbsp;years</h3>
           <p>
-          Full stack developer on multiple projects including www.fan.tv and many internal tools. 
+          Full stack developer on multiple projects including www.fan.tv and many internal tools and cloud services. 
           Led the web development team of 4 engineers, 2 designers, and 1 QA engineer to develop our mobile web application on an aggressive 6 month schedule.
           Built a highly performant (jank-free and consistent 60fps) full-screen parallax marketing page for our flagship product launch.
-          Organized tech meetings to discuss modern web technology adoption.
-          Integrated modern front-end technologies into the existing web application with a 20k LOC legacy code base. 
-          Created a multi-threaded dependency management framework for efficient networking in Ruby.
-          Wrote a highly optimized persistent HTTP connection framework to manage connections between components in a service oriented architecture.
+          Integrated modern front-end technologies into the existing web application with a hundreds of thousands LOC legacy code base. 
+          Created a multi-threaded dependency management framework for performance optimization.
+          Wrote a multi-host persistent HTTP connection framework to manage connections between servers in a service oriented architecture.
           Re-architected the network layer of the web server with a focus on simplification and performance bringing worst case pageload performance down from 10s to 600ms on data heavy pages.
+          Wrote a custom validation framework that integrates with ActiveModel to recursively validate models and report errors in a hierarchical format.
           Architected, designed and implemented a complete reboot of an internal tool used daily by a team of data analysts for associating Media with Metadata.
           Developed a real-time debugging tool that connects to our android OpenGL interface on our set-top-box and allows on the fly modification of application state.
+          Organized tech meetings to discuss modern web technology adoption.
+          Screened and interviewed candidates for hire.
           </p>
         </div>
         <div>
