and the patent...

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
           Wrote a custom validation framework that integrates with ActiveModel to recursively validate models and report errors in a hierarchical format.
           Architected, designed and implemented a complete reboot of an internal tool used daily by a team of data analysts for associating Media with Metadata.
           Developed a real-time debugging tool that connects to our android OpenGL interface on our set-top-box and allows on the fly modification of application state.
+          Awarded a patent for dead-zone aware adaptive buffering of content downloading on a wireless network.
           Organized tech meetings to discuss modern web technology adoption.
           Screened and interviewed candidates for hire.
           </p>
