--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           Integrated modern front-end technologies into the existing web application with a hundreds of thousands LOC legacy code base. 
           Created a multi-threaded dependency management framework for performance optimization.
           Wrote a multi-host persistent HTTP connection framework to manage connections between servers in a service oriented architecture.
-          Re-architected the network layer of the web server with a focus on simplification and performance bringing worst case pageload performance down from 10s to 600ms on data heavy pages.
+          Re-architected the network layer of the web server with a focus on simplification and performance bringing worst case pageload time down from 10s to 600ms on data heavy pages.
           Wrote a custom validation framework that integrates with ActiveModel to recursively validate models and report errors in a hierarchical format.
           Architected, designed and implemented a complete reboot of an internal tool used daily by a team of data analysts for associating Media with Metadata.
           Developed a real-time debugging tool that connects to our android OpenGL interface on our set-top-box and allows on the fly modification of application state.
